<resources>
    <string name="absensi_jamaah">Absensi Jamaah</string>
    <string-array name="dummy_data_jamaah" >
        <item>HIDAYATI NOTO RUMADI</item>
        <item>MUHLIS JUNAIDI SALAM</item>
        <item>RINA SRI HARYATI</item>
        <item>JUBAEDAH TASKI KARTAWANGSA</item>
        <item>WABIHI CASMIDI SUTIRTO</item>
        <item>SULISTYORINI SOEKEMI SOEROTO</item>
        <item>RAHMAN HIDAYAT ZAINI</item>
        <item>KURNIA DEWI TATANG</item>
        <item>WIDIA KURNIANTO SOEKEMI</item>
        <item>AGUNG SUBARKAH DJAINI</item>
        <item>SITI ROGAIYAH BAIDHAWI</item>
        <item>RACHMAT HARTOYO R. AHADI</item>
        <item>EVI KUSTANTI YOSEP SUDJONO</item>
        <item>TITIK SUWARTI JASMANI</item>
        <item>FATIMAH ZAENAL ARIFIN</item>
        <item>GILANG RAHADIAN RUSWANDI</item>
        <item>IRFANUL ARIEF MARZUKI</item>
        <item>TUKIRAN HARJO DINOMO</item>
        <item>ASTRID PURI AYU RATNA MARLANGEN</item>
        <item>WITRIANAH MUJIHARJO ZULKARNAIN</item>
        <item>HENI SUMANTI WIRYODIHARJO</item>
        <item>DEWI RINA CAHYANI</item>
    </string-array>
    <string-array name="dummy_data_jamaah_dua" >
        <item>Rendra Muharaam</item>
        <item>Diwa Firdaus</item>
        <item>Prasetyo Gunawan</item>
        <item>Yusuf Affandi</item>
        <item>Bambang Jatmiko</item>
        <item>Ahmad Wigo Prasetya</item>
        <item>Asep Jamaludin</item>
        <item>Kiki Kusdiman</item>
        <item>Afitra Mamor</item>
    </string-array>
    <string-array name="dummy_data_jamaah_tiga" >
        <item>Rendra Muharaam</item>
        <item>Diwa Firdaus</item>
        <item>Prasetyo Gunawan</item>
        <item>Yusuf Affandi</item>
        <item>Bambang Jatmiko</item>
        <item>Ahmad Wigo Prasetya</item>
        <item>Asep Jamaludin</item>
        <item>Kiki Kusdiman</item>
        <item>Afitra Mamor</item>
    </string-array>
    <string name="btn_simpan">SIMPAN</string>
    <string name="no_porsi">No.Porsi</string>
    <string name="no_pasport">No.Pasport</string>
    <string name="tgl_rawat">Tgl Rawat</string>
    <string name="et_hambatan">Hambatan</string>
    <string name="user_id">User ID</string>
    <string name="rpt_bandara">Bandara</string>
    <string name="rpt_bandara_transit">Bandara Transit</string>
    <string name="rpt_flight">Flight</string>
    <string name="rpt_jumlah">Jumlah</string>
    <string name="rpt_lain_lain">Lain-lain</string>
    <string name="rpt_noUrut">No. Urut</string>
    <string name="rpt_pria">Pria</string>
    <string name="rpt_pukul">Pukul</string>
    <string name="rpt_sakit">Sakit</string>
    <string name="rpt_tanggal">Tanggal</string>
    <string name="rpt_wanita">Wanita</string>
    <string name="arilines">Airlines</string>
    <string name="hotel_jeddah">Hotel Jeddah</string>
    <string name="hotel_madinah">Hotel Madinah</string>
    <string name="hotel_makkah">Hotel Makkah</string>
    <string name="hotel_transit">Hotel Transit</string>
    <string name="hotel">Hotel</string>
    <string name="kd_paket">Kode Paket</string>
    <string name="katering_jeddah">Katering Jeddah</string>
    <string name="katering_madinah">Katering Madinah</string>
    <string name="katering_makkah">Katering Makkah</string>
    <string name="katering_transit">Katering Transit</string>
    <string name="lama_penyelenggaraan">Lama Penyelenggaraan</string>
    <string name="lama_tinggal">Lama Tinggal</string>
    <string name="lama_tinggal_jkt">Lama Tinggal JKT-SA-JKT</string>
    <string name="lama_tinggal_madinah">Lama Tinggal Madinah</string>
    <string name="lama_tinggal_makkah">Lama Tinggal Makkah</string>
    <string name="nama_jemaah">Nama Jemaah</string>
    <string name="nama_petugas_kemenag">Nama Petugas Kemenag</string>
    <string name="nama_petugas_kesehatan">Nama Petugas Kesehatan</string>
    <string name="nama_petugas_pembimbing">Nama Petugas Pembimbing</string>
    <string name="nama_petugas_pihk">Nama Petugas PIHK</string>
    <string name="tlp_p_kemenag">No.Telepon P.PIHK</string>
    <string name="tlp_p_pihk">No.Telepon P.PIHK</string>
    <string name="tlp_perwakilan">No.Telepon Perwakilan</string>
    <string name="no_petugas_kesehatan">No.Petugas Kesehatan</string>
    <string name="no_petugas_pembimbing">No. Petugas Pembimbing</string>
    <string name="transportasi">Transportasi</string>
    <string name="harga_standard">Harga Standard</string>
    <string name="harga_vip">Harga VIP</string>
    <string name="perwakilan_arab_saudi">Perwakilan Arab Saudi</string>
    <string name="rute_perjalanan">Rute Perjalanan</string>
    <string name="version">1.0.4</string>
    <string name="tgl_keberangkatan">Tanggal Keberangkatan</string>
    <string name="tgl_kepulangan">Tanggal Kepulangan</string>
    <string name="tgl_lahir">Tgl Lahir</string>
    <string name="app_name">SIPATUH</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_photos">Menu 1</string>
    <string name="nav_movies">Menu 2</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="tvRpt9">Jemaah Haji Sakit</string>
    <string name="tvRpt10">Jemaah Haji Wafat</string>
    <string name="tvRpt11">Kasus-Kasus Jemaah Haji</string>
    <string name="tvRpt12">Hambatan dan Saran</string>
    <string name="empty_textview">Error loading data</string>
    <string name="txt_noPassport">No. Passport</string>
    <string name="txt_pinPihk">No.PIN PIHK</string>
    <string name="txt_namaJemaah">Nama Jemaah</string>
    <string name="txt_usia">Usia</string>
    <string name="txt_tanggal">Tanggal</string>
    <string name="txt_rsbphi">RS/BPHI</string>
    <string name="txt_keterangan">Keterangan</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="userIcon">f</string>
    <string name="programIcon">a</string>
    <string name="mapIcon">g</string>
    <string name="profile_pihk">PROFILE PIHK</string>
    <string name="pin">PIN</string>
    <string name="nopin_pihk">No.Pin PIHK</string>
    <string name="nama_pemimpin">Nama Pemimpin</string>
    <string name="no_izin">No.Izin</string>
    <string name="masa_berlaku_izin">Masa Berlaku Izin</string>
    <string name="alamat">Alamat</string>
    <string name="telepon">Telepon</string>
    <string name="fax">FAX</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="asosiasi">Asosiasi</string>
    <string name="update">UPDATE</string>
    <string name="back">BACK</string>
    <string-array name="titles">
        <item>Cek Keberangkatan</item>
        <item>Peta Lokasi</item>
        <item>Jadwal Penerbangan</item>
        <item>Informasi Kesehatan</item>
        <item>Haji dan Umrah</item>
        <item>Call Center</item>
        <item>Informasi Penting</item>
        <item>Wisata</item>
        <item>Jadwal Sholat</item>
        <item>Al - Quran</item>
        <item>Nilai Tukar Real</item>
    </string-array>
    <string-array name="rpt_name">
        <item>rpt1_jumlah</item>
        <item>rpt1_pria</item>
        <item>rpt1_wanita</item>
        <item>rpt1_sakit</item>
        <item>rpt1_wafat</item>
        <item>rpt1_lain</item>
        <item>rpt2_jumlah</item>
        <item>rpt2_pria</item>
        <item>rpt2_wanita</item>
        <item>rpt2_sakit</item>
        <item>rpt2_wafat</item>
        <item>rpt2_lain</item>
        <item>rpt3_jumlah</item>
        <item>rpt3_pria</item>
        <item>rpt3_wanita</item>
        <item>rpt3_sakit</item>
        <item>rpt3_wafat</item>
        <item>rpt3_lain</item>
        <item>rpt4_jumlah</item>
        <item>rpt4_pria</item>
        <item>rpt4_wanita</item>
        <item>rpt4_sakit</item>
        <item>rpt4_wafat</item>
        <item>rpt4_lain</item>
        <item>rpt5_jumlah</item>
        <item>rpt5_pria</item>
        <item>rpt5_wanita</item>
        <item>rpt5_sakit</item>
        <item>rpt5_wafat</item>
        <item>rpt5_lain</item>
        <item>rpt6_jumlah</item>
        <item>rpt6_pria</item>
        <item>rpt6_wanita</item>
        <item>rpt6_sakit</item>
        <item>rpt6_wafat</item>
        <item>rpt6_lain</item>
        <item>rpt7_jumlah</item>
        <item>rpt7_pria</item>
        <item>rpt7_wanita</item>
        <item>rpt7_sakit</item>
        <item>rpt7_wafat</item>
        <item>rpt7_lain</item>
        <item>rpt8_jumlah</item>
        <item>rpt8_pria</item>
        <item>rpt8_wanita</item>
        <item>rpt8_sakit</item>
        <item>rpt8_wafat</item>
        <item>rpt8_lain</item>
    </string-array>
    <string-array name="rpt_number">
        <item>Cek Keberangkatan</item>
        <item>Peta Lokasi</item>
        <item>Jadwal Penerbangan</item>
        <item>Informasi Kesehatan</item>
        <item>Haji dan Umrah</item>
        <item>Call Center</item>
        <item>Informasi Penting</item>
        <item>Wisata</item>
        <item>Jadwal Sholat</item>
        <item>Al - Quran</item>
        <item>Nilai Tukar Real</item>
    </string-array>
    <string name="title_activity_tbsakit">Jemaahh Sakit</string>
    <string name="title_activity_tbwafat">Jemaahh Wafat</string>
    <string name="title_activity_tbsaran">Saran</string>
    <string name="title_activity_tbmasalah">Masalah</string>
</resources>