<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/fragment_profile" android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="20dp" android:textColor="@android:color/white" android:gravity="center_horizontal" android:background="@color/colorAccent" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/profile_pihk"/>
            <RelativeLayout android:orientation="horizontal" android:background="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@android:color/white" android:layout_gravity="left" android:id="@+id/string_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/pin"/>
                <TextView android:textStyle="bold" android:textColor="@android:color/black" android:gravity="right" android:id="@+id/tvProfileUID" android:background="@drawable/rounded_tag" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="13dp" android:minWidth="40dp" android:maxLines="1" android:layout_alignBaseline="@+id/string_id" android:layout_alignBottom="@+id/string_id" android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <EditText android:id="@+id/etProfileName" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/nopin_pihk" android:maxLines="1" android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <EditText android:id="@+id/etProfilePimpinan" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/nama_pemimpin" android:maxLines="1" android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>&gt;\10
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <EditText android:id="@+id/etProfileNoIzin" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/no_izin" android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>&gt;\10
            <RelativeLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                    <EditText android:id="@+id/etProfileMasaBerlaku" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/masa_berlaku_izin" android:inputType="date"/>
                </android.support.design.widget.TextInputLayout>
                <ImageButton android:id="@+id/btnMasaBerlaku" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_calendar" android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <EditText android:id="@+id/etProfileAlamat" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/alamat" android:inputType="textMultiLine"/>
            </android.support.design.widget.TextInputLayout>&gt;\10
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout android:layout_gravity="left" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                    <EditText android:id="@+id/etProfileTelp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/telepon" android:inputType="phone"/>
                </android.support.design.widget.TextInputLayout>&gt;\10
                <android.support.design.widget.TextInputLayout android:layout_gravity="left" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                    <EditText android:id="@+id/etProfileFax" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/fax" android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>&gt;\10
            </LinearLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <EditText android:id="@+id/etProfileEmail" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/email" android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <EditText android:id="@+id/etProfileAsosiasi" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/asosiasi" android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
                <Button android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" android:gravity="center" android:layout_gravity="left" android:id="@+id/btnBack" android:background="@color/colorTblLight" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/back" android:layout_weight="1"/>
                <Button android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" android:textColor="@android:color/white" android:layout_gravity="right" android:id="@+id/btnUpdate" android:background="@color/colorAccent" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/update" android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>
