<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5dp" app:cardElevation="4dp">
    <LinearLayout android:orientation="vertical" android:padding="10dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="100dp" android:layout_height="wrap_content" android:text="@string/txt_namaJemaah"/>
            <TextView android:layout_width="5dp" android:layout_height="wrap_content" android:text=":"/>
            <TextView android:textColor="#000" android:id="@+id/tvName" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/empty_textview"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="100dp" android:layout_height="wrap_content" android:text="@string/et_hambatan"/>
            <TextView android:layout_width="5dp" android:layout_height="wrap_content" android:text=":"/>
            <TextView android:textColor="#000" android:id="@+id/tvHambatan" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/empty_textview"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
