<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/myWindowBackground" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@+id/tab1" android:layout_width="match_parent" android:layout_height="match_parent">
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <EditText android:id="@+id/tv_noPassport" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:hint="@string/txt_noPassport" android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <EditText android:textColor="@color/colorAccent" android:id="@+id/tv_pinPihk" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:hint="@string/txt_pinPihk" android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <EditText android:textColor="@color/colorAccent" android:id="@+id/tv_usia" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:hint="@string/txt_usia" android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</RelativeLayout>
